composer: remove useless repositories def

--- a/composer.json
+++ b/composer.json
@@ -30,40 +30,5 @@
         }
     },
 
-    "target-dir": "Knp/Bundle/ZendCacheBundle",
-
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "zendframework/zend-cache",
-                "version": "2.0.0-beta1",
-                "dist": {
-                    "url":  "http://packages.zendframework.com/get/Zend_Cache-2.0.0beta1.tgz",
-                    "type": "pear"
-                },
-                "autoload": {
-                    "psr-0": {
-                        "Zend\\Cache": "php/"
-                    }
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "zendframework/zend-filter",
-                "version": "2.0.0-beta1",
-                "dist": {
-                    "url":  "http://packages.zendframework.com/get/Zend_Filter-2.0.0beta1.tgz",
-                    "type": "pear"
-                },
-                "autoload": {
-                    "psr-0": {
-                        "Zend\\Filter": "php/"
-                    }
-                }
-            }
-        }
-    ]
+    "target-dir": "Knp/Bundle/ZendCacheBundle"
 }
