--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php":                       ">=5.3.2",
         "symfony/framework-bundle":  ">=2.0.0",
-        "zendframework/zend-cache":  ">=2.0.0",
+        "socloz/zend-cache": "1.*@dev",
         "zendframework/zend-filter": ">=2.0.0"
     },
 
